# work_note

./: .gitignore  README.md  README.sync-conflict-20180304-182653-QGCKIUH.md  SUMMARY.md  book.json
algorithms/: README.md
auto_control_system/: README.md  a_story_of_auto_system_control.md
auto_control_system/modern_control_systems/: ch1_1.m  ch3_3.10.m  feedback_test.m  poly_test.m  series_parallel.m  statespace2tf.m  step_test.m  tf_usage.m  unforced.m  zero_pole.m
block_chain/: README.md
deeplearning/: Deeplearning_README.md  README.md
deeplearning/Andrew_Ng/: tensorflow_simple.py
deeplearning/caffe/: README.md
deeplearning/caffe_ssd/: README.md
deeplearning/caffe_to_ssd/: README.md
deeplearning/common/: Common_README.md
deeplearning/common/doc/: coco_api.md  image_detection_report.md
deeplearning/dev_enviroment/: README.md
deeplearning/dev_enviroment/doc/: caffe_ubuntu-14-04.md  caffe_vs2013_cuda8_cudnn5.md  cuda8_cudnn5_caffe_vs2013.md  cuda8_cudnn5_ssd_ubuntu-14-04.md  dl_dev_env.md  mxnet_install.md  openTLD_install_win.md  pytorch_install.md  (+3 more)
deeplearning/installation/: install ssd cuda8 cudnn5 on ubuntu 14.04.md
deeplearning/interview/: interview.md
deeplearning/machine_learning/: README.md
deeplearning/mask_rcnn/: mask_rcnn_installization.md
deeplearning/model_compression/: README.md
deeplearning/pytorch/: README.md
deeplearning/ssd/: README.md
deeplearning/tensorflow/: README.md
deeplearning/yolo/: YOLO_README.md  how_to_improve_yolo_object_detection.md  traing_yolo_on_custom_data.md  training_voc.md  training_yolo_on_voc.md  yolo_annotations.md  yolo_config.md
dev_tools/: README.md  work_on_server_effective.md
dev_tools/bash/: bash_examples.md  special_variables.md  square_brackets.md  test_list.txt
dev_tools/cmake/: README.md
dev_tools/cmake/code/cmaketest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
dev_tools/cmake/code/cmaketest/include/: foo.h
dev_tools/cmake/code/cmaketest/src/: foo.cpp  main.cpp
dev_tools/cpp/: CPP_README.md  README.md
dev_tools/cpp/code/boost/time/: CMakeLists.txt  boost_time.cpp
dev_tools/cpp/code/cpp_primer_5nd/map_instance/: CMakeLists.txt  map.txt  map_instance.cpp  sales_data.cpp  sales_data.h
dev_tools/cpp/code/gflag/: CMakeLists.txt  README.md
dev_tools/cpp/code/gflag/src/: gflag.cpp
dev_tools/cuda/: README.md
dev_tools/dev_tools/: README.md
dev_tools/docker/: README.md
dev_tools/doxygen/: README.md
dev_tools/html5/: index.html
dev_tools/makefile/: README.md
dev_tools/math/: README.md
dev_tools/matlab/: README.md
dev_tools/md_usage/: README.md
dev_tools/opencv/: OPENCV_README.md  README.md
dev_tools/opencv/opencv2_cookbook/code/line_contours/: CMakeLists.txt
dev_tools/opencv/opencv2_cookbook/code/line_contours/include/: fit_line.h  line_contours.h
dev_tools/opencv/opencv2_cookbook/code/line_contours/src/: main.cpp
dev_tools/opencv/opencv2_cookbook/code/line_contours/src/tools/: fit_line.cpp  line_contours.cpp
dev_tools/python/: PYTHON_README.md  README.md
dev_tools/qt/:  README.md
dev_tools/ros/: README.md
dev_tools/useful_examples/: README.md
freezer/: README.md
freezer/doc/: availiable_jst_data-labels.txt  jst_classification_valid.md  jst_todo_list.md  labels.txt  labels_new.txt  tracks_in_jst.md
image_process/: README.md
image_process/code/cluster/kmeans2/: CMakeLists.txt  file_ops.cpp  kmeans2.cpp
image_process/code/defrog/cpp/haze-remove/: CMakeLists.txt  README.md
image_process/code/defrog/cpp/haze-remove/include/: guidedfilter.h  haze_remove.h  main.h
image_process/code/defrog/cpp/haze-remove/src/: guidedfilter.cpp  haze_remove.cpp  main.cpp
image_process/code/denoise/cpp/lee_filter_integer_image/: CMakeLists.txt
image_process/code/denoise/cpp/lee_filter_integer_image/include/: int_integral_image.hpp  int_integral_image_bak.hpp
image_process/code/denoise/cpp/lee_filter_integer_image/src/: int_integral_image.cpp
image_process/code/denoise/cpp/nl-Means/: CMakeLists.txt  README.md
image_process/code/denoise/cpp/nl-Means/include/: utils.h
image_process/code/denoise/cpp/nl-Means/src/: Makefile  nl_morpho.cpp  nlmeans.cpp  utils.cpp
image_process/code/tracker/: CMakeLists.txt  foreground.cpp  videoprocessing.cpp
image_process/doc/: denoise_lee.md  denoise_opencv.md  denoise_sum.md  skin_detect.md
interview/: README.md  autopolit_interview.md  dl_interview.md  slam.md
living/: README.md
living/doc/: gover_report.md  live_better.md
plocy_history/: README.md
plocy_history/doc/: 8-1.md
project_platform/: README.md
px4/: README.md
px4/doc/: qgroundcontrol_install.md
rtems/: README.md
slam/: README.md
software_project/: README.md
tdmc/: REMDME.md
tdmc/dehazing_houghline/: README.md
tdmc/dehazing_houghline_oneline/: README.md
tdmc/enhance_houghline/: CMakeLists.txt
tdmc/enhance_houghline_refactor/: CMakeLists.txt  README.md
tdmc/enhance_threshlod_houghline/: CMakeLists.txt  README.md  a.cpp  image_process.cpp  image_process.h  main.cpp
tdmc/topline_armline_dehazing_fasa_v0.4/: CMakeLists.txt  README.md
tdmc/topline_armline_dehazing_fasa_v0.4/include/: dehazing.h  fasa.h
tdmc/topline_armline_dehazing_fasa_v0.4/src/: main.cpp
tdmc/topline_armline_dehazing_fasa_v0.4/src/dehaze/: Transmission.cpp  dehazing.cpp
tdmc/topline_armline_dehazing_fasa_v0.4/src/detector/: line_detector.cpp
tdmc/topline_armline_dehazing_fasa_v0.4/src/fasa/: fasa.cpp
tdmc/topline_armline_dehazing_v0.3/: CMakeLists.txt  README.md
tdmc/topline_armline_denoise_v0.2/: CMakeLists.txt  README.md
tdmc/topline_armline_v0.1/: CMakeLists.txt  README.md
ubuntu_os_usage/: README.md  temp_check.md
ubuntu_os_usage/doc/: change_python_version_in_system.md  grep_usage.md  install_opencv2_and_opencv3.md  install_windows_in_virtualbox.md  nohup.md  qt_sogou.md  quick_cmd.md  sogou_install.md  system_backup_recover.md
ubuntu_usage_solutions/: README.md
ubuntu_usage_solutions/doc/: disk_space_usage.md  quick_cmd.md
work_plan/: README.md
work_plan/doc/: 2017-11-16.md  2018-07-30.md
(+611 files in other folders)
