cmake_minimum_required(VERSION 2.8)
project( integer_image )
find_package( OpenCV REQUIRED )
include_directories(include)
aux_source_directory(src SOURCE_FILES)
message("source files: " ${SOURCE_FILES})
add_executable( integer_image ${SOURCE_FILES})
target_link_libraries( integer_image ${OpenCV_LIBS} )